deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: developer-service
  labels:
    app: developer-service
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: developer-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: developer-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: developer-service
        version: v1
    spec:
      containers:
        - name: developer-app
          image: steven8519/developer-service
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    appdb: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      appdb: mongodb
  template:
    metadata:
      labels:
        appdb: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:3.6.6
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
    - port: 27017
      protocol: TCP
  selector:
    appdb: mongodb
